<resources>
    <string name="app_name">EatAlley</string>
    <string name="appetizer_1">1st Appetizer</string>
    <string name="appetizer_2">2nd Appetizer</string>
    <string name="appetizer_3">3rd Appetizer</string>
    <string name="total">Total</string>
    <string name="greeting">Bon retour parmi nous</string>
    <string name="name">Yohann</string>
    <string name="our_desert">Desserts</string>
    <string name="our_dishes">Plats</string>
    <string name="our_entries">Entrées</string>
    <string name="cart_title">Commande</string>
    <string name="cart">Votre panier</string>
    <string name="profile">Votre compte</string>
    <string name="profile_title">Profil</string>
    <string name="itemAdded">Votre plat a été ajouté au panier</string>
    <string name="emptycart">Votre panier est vide!</string>
    <string name="shopnow">Ajoutez votre panier</string>
    <string name="login">Connexion</string>
    <string name="email">E-mail</string>
    <string name="password">Mot de passe</string>
    <string name="register">Enregistrer</string>
    <string name="firstname">Nom</string>
    <string name="lastname">Prénom</string>
    <string name="placeorder">Passez votre commande</string>
    <string name="registrationerror">Merci de remplir tous les champs de manière correcte</string>
    <string name="loginerror">Identifiants invalides</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps">Google Maps</string>
    <string name="localisez_votre_restaurant">Localisez votre restaurant</string>
</resources>