<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingTop="30dp"
        android:paddingRight="25dp">

        <TextView
            android:id="@+id/tvGreeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greeting"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvGreeting"
            android:letterSpacing="0.04"
            android:text="@string/name"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="159dp"
            android:layout_height="38dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="-30dp"
            app:srcCompat="@drawable/logo" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="140dp"
        android:orientation="vertical"
        android:background="@drawable/card_bg"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:text="Commandez"
            android:textSize="40dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Et recevez votre commande \nen moins de 60 minutes"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="-3dp"
            android:textSize="20dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp">


                    <androidx.cardview.widget.CardView
                        android:layout_width="120dp"
                        android:layout_height="150dp"
                        app:cardElevation="10dp"
                        app:cardCornerRadius="10dp"
                        app:cardBackgroundColor="@color/slate_400"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:id="@+id/appetizers"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_gravity="center">

                            <ImageView
                                android:layout_width="90dp"
                                android:layout_height="90dp"
                                android:src="@drawable/entry"
                                android:layout_gravity="center"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/our_entries"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="22sp"
                                android:textStyle="bold" />
                        </LinearLayout>


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="120dp"
                        android:layout_height="150dp"
                        app:cardElevation="10dp"
                        app:cardCornerRadius="10dp"
                        app:cardBackgroundColor="@color/slate_400"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="10dp"
                        android:id="@+id/main_courses"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_gravity="center">

                            <ImageView
                                android:layout_width="90dp"
                                android:layout_height="90dp"
                                android:src="@drawable/dishes"
                                android:layout_gravity="center"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/our_dishes"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="22sp"
                                android:textStyle="bold" />
                        </LinearLayout>


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="120dp"
                        android:layout_height="150dp"
                        app:cardElevation="10dp"
                        app:cardCornerRadius="10dp"
                        app:cardBackgroundColor="@color/slate_400"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="10dp"
                        android:id="@+id/desserts"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_gravity="center">

                            <ImageView
                                android:layout_width="90dp"
                                android:layout_height="90dp"
                                android:src="@drawable/desert"
                                android:layout_gravity="center"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/our_desert"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="22sp"
                                android:textStyle="bold" />
                        </LinearLayout>


                    </androidx.cardview.widget.CardView>


                </LinearLayout>
            </HorizontalScrollView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cart_title"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:letterSpacing="0.04"
                    android:layout_marginBottom="5sp"/>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/slate_400"
                android:id="@+id/basket">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/cart_bg"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="40dp"
                        android:text="@string/cart"
                        android:textColor="@color/white"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                </LinearLayout>




            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/profile_title"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:letterSpacing="0.04"
                    android:layout_marginBottom="5sp"/>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="30dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/slate_400"
                android:id="@+id/profile_id">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="40sp"
                        android:text="@string/profile"
                        android:textColor="@color/white"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/profile_bg"
                        android:layout_marginStart="20dp"/>


                </LinearLayout>




            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>



</LinearLayout>